src/bindings_macos_aarch64.rs

extern "C" {
    #[doc = " @noop FT_OpenEx"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " Open the specified device and return a handle that will be used for subsequent accesses. The device can"]
    #[doc = " be specified by its serial number, device description or location."]
    #[doc = " @n This function can also be used to open multiple devices simultaneously. Multiple devices can be specified"]
    #[doc = " by serial number, device description or location ID (location information derived from the physical"]
    #[doc = " location of a device on USB). Location IDs for specific USB ports can be obtained using the utility"]
    #[doc = " USBView and are given in hexadecimal format. Location IDs for devices connected to a system can be"]
    #[doc = " obtained by calling FT_GetDeviceInfoList or FT_ListDevices with the appropriate flags."]
    #[doc = " @param pvArg1 Pointer to an argument whose type depends on the value of dwFlags."]
    #[doc = " It is normally be interpreted as a pointer to a null terminated string."]
    #[doc = " @param dwFlags FT_OPEN_BY_SERIAL_NUMBER, FT_OPEN_BY_DESCRIPTION or FT_OPEN_BY_LOCATION."]
    #[doc = " @param pHandle Pointer to a variable of type FT_HANDLE where the handle will be"]
    #[doc = " stored. This handle must be used to access the device."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " The parameter specified in pvArg1 depends on dwFlags: if dwFlags is FT_OPEN_BY_SERIAL_NUMBER,"]
    #[doc = " pvArg1 is interpreted as a pointer to a null-terminated string that represents the serial number of the"]
    #[doc = " device; if dwFlags is FT_OPEN_BY_DESCRIPTION, pvArg1 is interpreted as a pointer to a nullterminated"]
    #[doc = " string that represents the device description; if dwFlags is FT_OPEN_BY_LOCATION, pvArg1"]
    #[doc = " is interpreted as a long value that contains the location ID of the device. Please note that Windows CE"]
    #[doc = " and Linux do not support location IDs."]
    #[doc = " @n ftHandle is a pointer to a variable of type FT_HANDLE where the handle is to be stored. This handle must"]
    #[doc = " be used to access the device."]
    pub fn FT_OpenEx(pvArg1: PVOID, dwFlags: DWORD, pHandle: *mut FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_Close"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " Close an open device."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_Close(ftHandle: FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_Read"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " Read data from the device."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @param lpBuffer Pointer to the buffer that receives the data from the device."]
    #[doc = " @param dwBytesToRead Number of bytes to be read from the device."]
    #[doc = " @param lpdwBytesReturned Pointer to a variable of type DWORD which receives the number of"]
    #[doc = " bytes read from the device."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, FT_IO_ERROR otherwise. $see FT_STATUS"]
    #[doc = " @remarks"]
    #[doc = " FT_Read always returns the number of bytes read in lpdwBytesReturned."]
    #[doc = " @n This function does not return until dwBytesToRead bytes have been read into the buffer. The number of"]
    #[doc = " bytes in the receive queue can be determined by calling FT_GetStatus or FT_GetQueueStatus, and"]
    #[doc = " passed to FT_Read as dwBytesToRead so that the function reads the device and returns immediately."]
    #[doc = " When a read timeout value has been specified in a previous call to FT_SetTimeouts, FT_Read returns"]
    #[doc = " when the timer expires or dwBytesToRead have been read, whichever occurs first. If the timeout"]
    #[doc = " occurred, FT_Read reads available data into the buffer and returns FT_OK."]
    #[doc = " @n An application should use the function return value and lpdwBytesReturned when processing the buffer."]
    #[doc = " If the return value is FT_OK, and lpdwBytesReturned is equal to dwBytesToRead then FT_Read has"]
    #[doc = " completed normally. If the return value is FT_OK, and lpdwBytesReturned is less then dwBytesToRead"]
    #[doc = " then a timeout has occurred and the read has been partially completed. Note that if a timeout occurred"]
    #[doc = " and no data was read, the return value is still FT_OK."]
    #[doc = " @n A return value of FT_IO_ERROR suggests an error in the parameters of the function, or a fatal error like a"]
    #[doc = " USB disconnect has occurred."]
    pub fn FT_Read(
        ftHandle: FT_HANDLE,
        lpBuffer: LPVOID,
        dwBytesToRead: DWORD,
        lpdwBytesReturned: LPDWORD,
    ) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_Write"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " Write data to the device."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @param lpBuffer Pointer to the buffer that contains the data to be written to the device."]
    #[doc = " @param dwBytesToWrite Number of bytes to write to the device."]
    #[doc = " @param lpdwBytesWritten Pointer to a variable of type DWORD which receives the number of"]
    #[doc = " bytes written to the device."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_Write(
        ftHandle: FT_HANDLE,
        lpBuffer: LPVOID,
        dwBytesToWrite: DWORD,
        lpdwBytesWritten: LPDWORD,
    ) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_SetBaudRate"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " This function sets the baud rate for the device."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @param dwBaudRate Baud rate."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code"]
    pub fn FT_SetBaudRate(ftHandle: FT_HANDLE, dwBaudRate: ULONG) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_SetDivisor"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " This function sets the baud rate for the device. It is used to set non-standard baud rates."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @param usDivisor Divisor."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " This function is no longer required as FT_SetBaudRate will now automatically calculate the required"]
    #[doc = " divisor for a requested baud rate. The application note \"Setting baud rates for the FT8U232AM\" is"]
    #[doc = " available from the Application Notes section of the FTDI website describes how to calculate the divisor for"]
    #[doc = " a non-standard baud rate."]
    pub fn FT_SetDivisor(ftHandle: FT_HANDLE, usDivisor: USHORT) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_SetDataCharacteristics"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " This function sets the data characteristics for the device."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @param uWordLength Number of bits per word - must be FT_BITS_8 or FT_BITS_7."]
    #[doc = " @param uStopBits Number of stop bits - must be FT_STOP_BITS_1 or FT_STOP_BITS_2."]
    #[doc = " @param uParity Parity - must be FT_PARITY_NONE, FT_PARITY_ODD, FT_PARITY_EVEN,"]
    #[doc = " FT_PARITY_MARK or FT_PARITY SPACE."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_SetDataCharacteristics(
        ftHandle: FT_HANDLE,
        uWordLength: UCHAR,
        uStopBits: UCHAR,
        uParity: UCHAR,
    ) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_SetTimeouts"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " This function sets the read and write timeouts for the device."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @param dwReadTimeout Read timeout in milliseconds."]
    #[doc = " @param dwWriteTimeout Write timeout in milliseconds."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_SetTimeouts(
        ftHandle: FT_HANDLE,
        dwReadTimeout: ULONG,
        dwWriteTimeout: ULONG,
    ) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_SetFlowControl"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " This function sets the flow control for the device."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @param usFlowControl Must be one of FT_FLOW_NONE, FT_FLOW_RTS_CTS, FT_FLOW_DTR_DSR or"]
    #[doc = " FT_FLOW_XON_XOFF."]
    #[doc = " @param uXonChar Character used to signal Xon. Only used if flow control is FT_FLOW_XON_XOFF."]
    #[doc = " @param uXoffChar Character used to signal Xoff. Only used if flow control is\tFT_FLOW_XON_XOFF."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_SetFlowControl(
        ftHandle: FT_HANDLE,
        usFlowControl: USHORT,
        uXonChar: UCHAR,
        uXoffChar: UCHAR,
    ) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_SetDtr"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " This function sets the Data Terminal Ready (DTR) control signal."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " This function asserts the Data Terminal Ready (DTR) line of the device."]
    pub fn FT_SetDtr(ftHandle: FT_HANDLE) -> FT_STATUS;
}
